--- a/Croatian/main/CellBroadcastApp.apk/res/values-hr/strings.xml
+++ b/Croatian/main/CellBroadcastApp.apk/res/values-hr/strings.xml
@@ -137,7 +137,10 @@
     <string name="item_view_role_description">Kartica</string>
     <string name="location_check_time">Vrijeme provjere lokacije:</string>
     <string name="material_clock_toggle_content_description">Odaberite prijepodne ili poslijepodne</string>
-    <string name="material_timepicker_am">AM</string>
+    <string name="material_slider_range_end">Kraj raspona</string>
+    <string name="material_slider_range_start">Početak raspona</string>
+    <string name="material_slider_value">Vrijednost</string>
+	 <string name="material_timepicker_am">AM</string>
     <string name="material_timepicker_pm">PM</string>
     <string name="maximum_waiting_time">Maksimalno vrijeme čekanja:</string>
     <string name="menu_delete">Brisanje emitiranja</string>
@@ -153,7 +156,10 @@
     <string name="message_serial_number">Serijski broj:</string>
     <string name="mtrl_badge_numberless_content_description">Nova obavijest</string>
     <string name="mtrl_chip_close_icon_content_description">Ukloni %1$s</string>
-    <string name="mtrl_exceed_max_badge_number_content_description">Više od %1$d novih obavijesti</string>
+    <string name="mtrl_checkbox_state_description_checked">Označeno</string>
+    <string name="mtrl_checkbox_state_description_indeterminate">Djelomično označeno</string>
+    <string name="mtrl_checkbox_state_description_unchecked">Nije označeno</string>
+	 <string name="mtrl_exceed_max_badge_number_content_description">Više od %1$d novih obavijesti</string>
     <string name="mtrl_picker_a11y_next_month">Prijelaz na sljedeći mjesec</string>
     <string name="mtrl_picker_a11y_prev_month">Pomicanje na prethodni mjesec</string>
     <string name="mtrl_picker_cancel">Odustani</string>
@@ -188,11 +194,14 @@
     <string name="receive_cmas_in_second_language_summary" />
     <string name="receive_cmas_in_second_language_title" />
     <string name="seconds">s</string>
+	 <string name="searchview_clear_text_content_description">Izbriši tekst</string>
+    <string name="searchview_navigation_content_description">Natrag</string>
     <string name="show_all_messages">Prikaži sve poruke</string>
     <string name="show_cmas_opt_out_summary">Prikaži dijaloški okvir za isključivanje nakon prikazivanja prvog upozorenja (osim predsjedničkog).</string>
     <string name="show_cmas_opt_out_title">Prikaži dijaloški okvir za isključivanje</string>
     <string name="show_regular_messages">Prikaži redovne poruke</string>
-    <string name="sms_cb_sender_name_default">Hitna upozorenja putem bežične mreže</string>
+    <string name="side_sheet_accessibility_pane_title">Bočni list</string>
+	 <string name="sms_cb_sender_name_default">Hitna upozorenja putem bežične mreže</string>
     <string name="sms_cb_sender_name_emergency">Hitna upozorenja putem bežične mreže</string>
     <string name="sms_cb_sender_name_presidential">Hitna upozorenja putem bežične mreže</string>
     <string name="sms_cb_sender_name_public_safety">Informativna obavijest</string>
