--- a/Croatian/main/CloudBackup.apk/res/values-hr/strings.xml
+++ b/Croatian/main/CloudBackup.apk/res/values-hr/strings.xml
@@ -302,6 +302,8 @@ Molimo pošaljite ovaj kod tehničaru."</string>
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
   <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Završi način rada za uređivanje</string>
   <string name="miuix_appcompat_accessibility_new_message">Nova poruka</string>
   <string name="miuix_appcompat_accessibility_start_edit_action_mode">Pokreni način rada za uređivanje</string>
@@ -332,6 +334,8 @@ Molimo pošaljite ovaj kod tehničaru."</string>
   <string name="miuix_sbl_tracking_progress_labe_up_none">"To je sve za sada"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
+  <string name="miuix_stretchablewidget_collapsed">Sažeto</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="miuix_show_password">Prikaži zaporku</string>
   <string name="monday">Ponedjeljak</string>
   <string name="monday_short">Pon</string>
