--- a/Croatian/main/MiSettings.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiSettings.apk/res/values-hr/strings.xml
@@ -28,6 +28,11 @@
   <string name="abc_shareactionprovider_share_with_application">Dijeli putem aplikacije %s</string>
   <string name="abc_toolbar_collapse_description">Sažmi</string>
   <string name="actionbar_button_up_description">Natrag</string>
+  <string name="accessibility_sliding_button_state_description_off">Isključeno</string> 
+  <string name="accessibility_sliding_button_state_description_on">Uključeno</string> 
+  <string name="accessibility_tab_state_description_unselect">Nije odabrano</string> 
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
+  <string name="actionbar_button_up_description">Natrag</string>
   <string name="adaptive_fps_tip">2. Postignite najbolju ravnotežu između glatkoće i trajanja baterije dinamičkim podešavanjem brzine osvježavanja.</string>
   <string name="advanced_mode">Napredne postavke</string>
   <string name="advanced_paper_mode_title">Udobnost za oči</string>
@@ -314,22 +319,23 @@ nije generirana u Drugom prostoru"</string>
   <string name="first_unlock_time">"Prvo otključavanje: "</string>
   <string name="fmt_date_long_month">MMMM</string>
   <string name="fmt_date_long_month_day">d MMMM</string>
-  <string name="fmt_date_long_year_month">MMMM, yyyy</string>
-  <string name="fmt_date_long_year_month_day">d MMMM, yyyy</string>
-  <string name="fmt_date_numeric_month_day">dd.MM</string>
+  <string name="fmt_date_long_year_month">MMMM. yyyy</string>
+  <string name="fmt_date_long_year_month_day">d MMMM. yyyy</string>
+  <string name="fmt_date_numeric_month_day">dd.MM.</string>
   <string name="fmt_date_numeric_year">yyyy</string>
   <string name="fmt_date_numeric_year_month">MM.yyyy</string>
   <string name="fmt_date_numeric_year_month_day">dd.MM.yyyy</string>
   <string name="fmt_date_short_month">MMM</string>
   <string name="fmt_date_short_month_day">d MMM</string>
-  <string name="fmt_date_short_year_month">MMM, yyyy</string>
-  <string name="fmt_date_short_year_month_day">d MMM, yyyy</string>
+  <string name="fmt_date_short_year_month">MMM. yyyy</string>
+  <string name="fmt_date_short_year_month_day">d MMM. yyyy</string>
   <string name="focus_mode_custom_time">Prilagođeno trajanje</string>
   <string name="focus_mode_timer_add_limit">Možete dodati do %d vlastitih timera</string>
   <string name="focus_mode_timer_delete">Izbriši</string>
   <string name="focus_mode_timer_exist">Ova sesija već postoji</string>
   <string name="focus_mode_timer_pick_dialog_summary" formatted="false">%d do %d min.</string>
   <string name="focus_mode_timer_pick_dialog_title">Unesite trajanje</string>
+  <string name="focus_records_image_description">Podijeli</string>
   <string name="focus_time_exception_tip">Izgleda da se promijenilo vrijeme sustava. Isključite način fokusiranja.</string>
   <string name="follow_apps_settings">Na temelju postavki aplikacije</string>
   <string name="follow_sim1">Primijeni postavke SIM 1</string>
@@ -507,6 +513,22 @@ nije generirana u Drugom prostoru"</string>
   <string name="minors_negativeButton">Odustani</string>
   <string name="minors_not_allow_apps_hint">"Ne možete koristiti ovu aplikaciju u dječjem načinu rada"</string>
   <string name="miuix_access_state_desc">Odabrano</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažet</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izlaz iz načina uređivanja</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđi u način uređivanja</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_close">Povuci prstom prema dolje za zatvaranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_half_screen">Povuci prstom prema dolje za prelazak na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_minimized">Povuci prstom dolje za minimiziranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_half_screen">Povuci prstom prema gore za prelazak na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_maximized">Povuci prstom prema gore za maksimiziranje</string>
+  <string name="miuix_bottom_sheet_accessibility_state_half_screen">Pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_state_maximized">Maksimizirano</string>
+  <string name="miuix_bottom_sheet_accessibility_state_minimized">Minimizirano</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_half_screen">Prebacivanje na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_maximized">Maksimiziraj</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_minimized">Minimiziraj</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
@@ -538,6 +560,10 @@ nije generirana u Drugom prostoru"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_none">"To je sve za sada"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
+  <string name="miuix_progressbar_loading">Samo trenutak…</string>
+  <string name="miuix_show_password">Prikaži zaporku</string>
+  <string name="miuix_stretchablewidget_collapsed">Sažeto</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="mix_match_random">Slučajno</string>
   <string name="mix_match_submit">Postavi</string>
   <string name="mix_match_type_bird">Ptice</string>
@@ -693,6 +719,7 @@ nije generirana u Drugom prostoru"</string>
   <string name="msc_set_password_next">Dalje</string>
   <string name="msc_set_pattern_password_name">Postavi uzorak</string>
   <string name="msc_set_screen_time_control_password">Postavi zaporku za vrijeme korištenja zaslona</string>
+  <string name="msc_set_screen_time_control_password_comment">*Dječji način rada možete uključiti u Postavkama.</string>
   <string name="msc_set_screen_time_control_password_message">"Kada postavite zaporku za vrijeme pred zaslonom, nakon što vrijeme pred zaslonom premaši postavljeni iznos ili promijenite povezane postavke, morat ćete unijeti zaporku za nastavak."</string>
   <string name="msc_split_screen_not_unlock_title">Izađi iz podijeljenog zaslona za otključavanje</string>
   <string name="msc_suggest_save_account">Ukloniti Xiaomi račun?</string>
@@ -979,6 +1006,7 @@ Povući suglasnost sada?"</string>
   <string name="tasmanian_devil">Tasmanski vrag</string>
   <string name="tasmanian_devil_info">Tasmanski vragovi mali su mesojedi čistači mrzovoljne ćudi.</string>
   <string name="tasmanian_native_hen">Tasmanijska nativna kokoš</string>
+  <string name="text_input_layout_default_error">Ovo je zadana pogreška</string>
   <string name="thememanager_not_found">"Ne mogu otvoriti Teme. Provjerite je li ova aplikacija instalirana na vašem uređaju."</string>
   <string name="thursday">Četvrtak</string>
   <string name="thursday_short">Čet</string>
