--- a/Croatian/main/MiuiAod.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiAod.apk/res/values-hr/strings.xml
@@ -56,6 +56,19 @@
   <string name="aod_dual_clock_date">HH:mm dd.MM.</string>
   <string name="aod_dual_clock_date_12">hh:mm dd.MM. aa</string>
   <string name="aod_find_more">Više opcija</string>
+  <string name="aod_gradient_1">Svijetloplavi i tirkizni gradijent</string>
+  <string name="aod_gradient_10">Ružičasti, narančasti i ljubičasti gradijent</string>
+  <string name="aod_gradient_11">Ružičasti i narančasti gradijent</string>
+  <string name="aod_gradient_2">Ružičasti i ljubičasti gradijent</string>
+  <string name="aod_gradient_3">Svijetloplavi i tamnoplavi gradijent</string>
+  <string name="aod_gradient_4">Ružičasti, ljubičasti i plavi gradijent</string>
+  <string name="aod_gradient_5">Narančasti, ružičasti i crveni gradijent</string>
+  <string name="aod_gradient_5_1">Lavanda, ružičasti i crveni gradijent</string>
+  <string name="aod_gradient_6">Mento zelena i plava gradijent</string>
+  <string name="aod_gradient_6_1">Plavi i ljubičasti gradijent</string>
+  <string name="aod_gradient_7">Svijetložuta i zeleni gradijent</string>
+  <string name="aod_gradient_8">Svijetložuti gradijent</string>
+  <string name="aod_gradient_9">Narančasti i žuti gradijent</string>
   <string name="aod_lock_screen_date">dd.MM. EEEE</string>
   <string name="aod_lock_screen_date_12">dd.MM. EEEE</string>
   <string name="aod_lock_screen_date_12_signature">dd.MM.</string>
@@ -75,6 +88,26 @@ dd.MM."</string>
   <string name="aod_multi_window_not_support">"Ova radnja nije podržana na podijeljenom zaslonu"</string>
   <string name="aod_notification_use_app_icon">Koristi ikone aplikacija za obavijesti</string>
   <string name="aod_preview_title">Pregled</string>
+  <string name="aod_pure_color_1">Bijela</string>
+  <string name="aod_pure_color_10">Svijetlo plavo-zelena</string>
+  <string name="aod_pure_color_11">Svijetlo nebesko plava</string> 
+  <string name="aod_pure_color_12">Nebesko plava</string>
+  <string name="aod_pure_color_13">Svijetlo plava</string> 
+  <string name="aod_pure_color_14">Svijetlo plavo-siva</string>
+  <string name="aod_pure_color_15">Plavo-ljubičasta</string>
+  <string name="aod_pure_color_16">Lavanda</string> 
+  <string name="aod_pure_color_17">Svijetlo ljubičasta</string> 
+  <string name="aod_pure_color_18">Svijetlo ružičasta</string> 
+  <string name="aod_pure_color_19">Ružičasta</string>
+  <string name="aod_pure_color_2">Crveno-narančasta</string>
+  <string name="aod_pure_color_20">Ružičasta</string> 
+  <string name="aod_pure_color_3">Svijetlo koraljna</string> 
+  <string name="aod_pure_color_4">Svijetlo narančasta</string>
+  <string name="aod_pure_color_5">Žuto-narančasta</string> 
+  <string name="aod_pure_color_6">Svijetlo žuta</string> 
+  <string name="aod_pure_color_7">Žuto-zelena</string>
+  <string name="aod_pure_color_8">Svijetlo zelena</string>
+  <string name="aod_pure_color_9">Zelena</string>
   <string name="aod_resting_screen_define">Prilagođeno</string>
   <string name="aod_resting_screen_same_to_lock">Isto kao zaključani zaslon</string>
   <string name="aod_resting_screen_style_title">Tema</string>
@@ -118,11 +151,21 @@ dd.MM."</string>
   <string name="chip_text">Chip tekst</string>
   <string name="choose_aod_style">Odaberite temu</string>
   <string name="chosen_picture">Odaberite pozadinu</string>
+  <string name="center_horizon">Vodoravno u centru</string>
+  <string name="center_vertical">Okomito u centru</string>
+  <string name="change_picture">Promijeni sliku</string>
   <string name="classic_calendar_day_of_week_format">EE</string>
   <string name="classic_calendar_month_of_year_format">MMM</string>
   <string name="clear_text_end_icon_content_description">Izbriši tekst</string>
   <string name="clearable_edittext_clear_description">Izbriši</string>
   <string name="clock_panel_icon">Izgled sata</string>
+  <string name="clock_style_static_1">Podebljane crte</string>
+  <string name="clock_style_static_2">Točkasto</string>
+  <string name="clock_style_static_3">Točkasto s crtama</string>
+  <string name="clock_style_static_4">Brojevi</string>
+  <string name="clock_style_static_5">Dvostruki prsteni</string> 
+  <string name="clock_style_static_6">Tanke crte</string>
+  <string name="clock_style_static_7">Kratke crte</string>
   <string name="close">Zatvori</string>
   <string name="color_change_with_time_description">Promijeni boju teksta automatski tijekom vremena</string>
   <string name="color_change_with_time_title">Promijeni boju automatski</string>
@@ -142,6 +185,7 @@ dd.MM."</string>
   <string name="disable_aod_in_dark_room">Isključi kad leži u mraku</string>
   <string name="disable_aod_in_power_save_mode">Isključi kad je uključena Štednja baterije</string>
   <string name="disable_aod_in_power_save_mode_summary">"Ne prikazuj stavke radi uštede energije"</string>
+  <string name="default_clock_style">Nepoznato</string>
   <string name="dual_clock_tip">Dvostruki sat je uključen. Dodirnite da biste otvorili Postavke.</string>
   <string name="error_a11y_label">Pogreška: nevažeće</string>
   <string name="error_icon_content_description">Pogreška</string>
@@ -447,6 +491,7 @@ dd.MM."</string>
   <string name="kg_word_spacing">Prored između znakova</string>
   <string name="label">Oznaka</string>
   <string name="large_time">Veliki sat</string>
+  <string name="left_horizon">Vodoravno lijevo</string>
   <string name="letter_space">Razmak između slova</string>
   <string name="line_space">Razmak između redova</string>
   <string name="linkage_select_title">Animirajte prijelaz na zaključani zaslon</string>
@@ -662,6 +707,8 @@ mm"</string>
   <string name="please_input_signature">Unesite potpis</string>
   <string name="preference_copied">\"%1$s\" je kopiran u međuspremnik.</string>
   <string name="rain_probability_desc">Mogućnost padalina: %s</string>
+  <string name="right_horizon">Vodoravno desno</string>
+  <string name="right_vertical">Okomito desno</string>
   <string name="saturday">Subota</string>
   <string name="saturday_short">Sub</string>
   <string name="saturday_shortest">S</string>
@@ -681,6 +728,8 @@ mm"</string>
   <string name="select_notification_notify_style">Odaberite efekat obavijesti</string>
   <string name="send">Poašlji</string>
   <string name="settings_view_btn_check_off">Isključeno</string>
+  <string name="settings_view_btn_stoped">Isključeno</string>
+  <string name="settings_view_switch_type">Promjeni</string>
   <string name="settings_view_btn_check_on">Uključeno</string>
   <string name="share">Podijeli</string>
   <string name="share_to_community">Podijeli na Mi Community</string>
