--- a/Croatian/main/MiuiCompass.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiCompass.apk/res/values-hr/strings.xml
@@ -140,6 +140,8 @@
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
   <string name="mobiledata_alert_dialog_message">Povezati se s internetom za kalibriranje nadmorske visine?</string>
   <string name="mobiledata_alert_dialog_title">Upozorenje uporabe podataka</string>
+  <string name="mode_normal_switched">Prebačeno na uobičajeni prikaz</string>
+  <string name="mode_realwolrd_switched">Prebačeno na pregled uživo</string>
   <string name="monday">Ponedjeljak</string>
   <string name="monday_short">Pon</string>
   <string name="monday_shortest">P</string>
