--- a/Croatian/main/MiuiScanner.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiScanner.apk/res/values-hr/strings.xml
@@ -159,6 +159,19 @@
   <string name="connect_wifi">Poveži se s tom mrežom</string>
   <string name="connect_wifi_no_local_premissions">Povežite se s ovom mrežom (potrebna su dopuštenja za lokaciju)</string>
   <string name="contact_details">QR kod:</string>
+  <string name="content_description_add_photo">Dodaj fotografiju</string>
+  <string name="content_description_change">Promijeni objekt</string>
+  <string name="content_description_checked">Dvaput dodirnite za promjenu</string>
+  <string name="content_description_move">Premješteno ispod \"%s\"</string>
+  <string name="content_description_movetop">Premješteno na vrh</string>
+  <string name="content_description_next">Sljedeća stranica</string>
+  <string name="content_description_page">Stranica: %s</string>
+  <string name="content_description_pre">Prethodna stranica</string>
+  <string name="content_description_qr_arrow">Strelica QR koda</string>
+  <string name="content_description_select">Odabrano</string>
+  <string name="content_description_touch">Tipka \"Prevedi riječi\". Prijeđite s dva prsta za aktivaciju.</string>
+  <string name="content_description_unselect">Nije odabrano</string>
+  <string name="copynull">"Nije pronađen sadržaj za kopiranje"</string>
   <string name="content_desktop_uninstall">"Skener je aplikacija sustava. Nećete moći koristiti preglednik, kameru, Super Mi AI, kontakte i druge sustava aplikacije ako ga deinstalirate."</string>
   <string name="continue_access_web_url">Idi na web stranicu</string>
   <string name="continue_to_website">Idi na web stranicu</string>
