--- a/Croatian/main/Settings.apk/res/values-hr/strings.xml
+++ b/Croatian/main/Settings.apk/res/values-hr/strings.xml
@@ -2711,6 +2711,10 @@ Tu značajku možete isključiti u Postavke &gt; Bluetooth &gt; Upareni uređaji
   <string name="bt_absVolume_open_dialog_title">Pažnja</string>
   <string name="bt_absVolume_pre_title">Održavajte glasnoću dosljednom</string>
   <string name="bt_absVolume_summary">Zadrži strogo dosljednu glasnoću Bluetooth uređaja i telefona</string>
+  <string name="bt_accessibility_description_heading">Naslov</string>
+  <string name="bt_accessibility_description_select">Odabrano</string>
+  <string name="bt_accessibility_description_unselect">Nije odabrano</string>
+  <string name="bt_headset_picture">Slika</string>
   <string name="bt_always_show_icon">"Ne prikazuj Bluetooth ikonu u statusnoj traci"</string>
   <string name="bt_always_show_icon_summary">Prikaži Bluetooth ikonu samo u Panelu obavijesti i u Centru za kontrolu</string>
   <string name="bt_aptx_adaptive_open_dialog_summary">aptX Adaptive omogućit će reprodukciju visoke kvalitete i smanjiti kašnjenje zvuka za igre i video uz povećanje potrošnje energije. Reprodukcija može biti zaustavljena zbog hardverskih ograničenja Bluetootha i smetnji iz okoline.</string>
@@ -3151,6 +3155,52 @@ Ako je to dopuštenje uključeno, aplikacija će biti dostupna kao opcija svaki 
   <string name="children_mode_tips_off">Nakon uključivanja Dječjeg načina dodirnite tipku Početna za povratak na Poč. zaslon.</string>
   <string name="children_mode_tips_on">Nakon isključivanja Dječjeg načina dodirnite tipku Početna za povratak na Poč. zaslon.</string>
   <string name="children_mode_title">Dječji način</string>
+  <string name="chip_add_title">Dodaj frekvenciju</string>
+  <string name="chip_change_error_toast">"Parametri se ne mogu prilagoditi"</string>
+  <string name="chip_change_toast">Frekvencija je promijenjena. Ponovno pokrenite uređaj da biste primijenili promjene.</string>
+  <string name="chip_cpu_tip">CPU</string>
+  <string name="chip_dialog_cancel">Otkaži</string>
+  <string name="chip_dialog_reboot">Ponovno pokretanje</string>
+  <string name="chip_edit_dialog_message">Potrebna je provjera frekvencije. To može produžiti vrijeme ponovnog pokretanja.</string>
+  <string name="chip_edit_dialog_title">Ponovno pokrenite da biste primijenili promjene</string>
+  <string name="chip_edit_dialog_title_new">Ponovno pokrenite uređaj da biste primijenili promjene</string>
+  <string name="chip_edit_title">Uredi frekvenciju</string>
+  <string name="chip_fre_bottom">Možete odabrati frekvenciju unutar dopuštenog raspona. Interval između susjednih frekvencija mora biti veći od %s GHz</string>
+  <string name="chip_fre_label">Prilagođeno</string>
+  <string name="chip_fre_tip">Frekvencija (GHz)</string>
+  <string name="chip_frequency">Frekvencija: %s GHZ</string>
+  <string name="chip_frequency_msg">Maksimalna frekvencija %s GHz</string>
+  <string name="chip_gpu_tip">GPU</string>
+  <string name="chip_manager_big">Veliko</string>
+  <string name="chip_manager_gpu">Jezgra</string>
+  <string name="chip_manager_middle">Srednje</string>
+  <string name="chip_manager_middle_small">Energetski učinkovito</string> 
+  <string name="chip_manager_small">Malo</string>
+  <string name="chip_manager_title">Nadzorna ploča performansi čipa</string>
+  <string name="chip_manager_welcome">"Dobrodošli na
+Nadzornu ploču performansi čipa"</string>
+  <string name="chip_notification_error_message">Zadane postavke su vraćene kako bi se osigurala normalna upotreba</string>
+  <string name="chip_notification_error_title">Pogreška parametra čipa</string>
+  <string name="chip_notification_fail_message">"Nije uspjelo proći provjeru pokretanja. Prilagodite parametre i pokušajte ponovno."</string>
+  <string name="chip_notification_fail_title">"Nije uspjelo prilagoditi parametre čipa"</string>
+  <string name="chip_notification_success_message">Provjera pokretanja uspješno je prošla. Ako se pojave problemi, zadane postavke bit će vraćene.</string>
+  <string name="chip_notification_success_title">Parametri čipa uspješno prilagođeni</string>
+  <string name="chip_per_summary">Prilagodite frekvenciju i napon svake grupe jezgri CPU-a i GPU-a</string>
+  <string name="chip_per_summary_new">Prilagodite frekvenciju i napon svake grupe jezgri</string>
+  <string name="chip_per_title">Nadzorna ploča performansi čipa</string>
+  <string name="chip_reset_dialog_message">Za vraćanje zadanih postavki, ponovno pokrenite uređaj.</string>
+  <string name="chip_reset_dialog_message_new">Ponovno pokrenite uređaj za vraćanje zadanih postavki.</string>
+  <string name="chip_reset_dialog_title">Vratiti uređaj sada?</string>
+  <string name="chip_reset_menu">Vrati zadane postavke</string>
+  <string name="chip_save_restart">Spremi i ponovno pokrenite</string>
+  <string name="chip_toast_add_msg">Možete dodati do %d frekvencija</string>
+  <string name="chip_vol_bottom">Odaberite pomak napona unutar dopuštenog raspona</string>
+  <string name="chip_vol_default">Zadano</string>
+  <string name="chip_vol_tip">Napon (mV)</string>
+  <string name="chip_voltage">%s mV</string>
+  <string name="chip_voltage_tip">Napon: %s</string>
+  <string name="chip_welcome_tip">Podesite napon i frekvenciju svake grupe jezgri</string>
+  <string name="chip_welcome_tip_new">Podesite napon i frekvenciju svake grupe jezgri. Ako se nakon podešavanja pojave problemi sa stabilnošću ili drugi problemi, uređaj će se automatski ponovno pokrenuti kako bi se vratile zadane postavke.</string>
   <string name="chip_text">Chip tekst</string>
   <string name="choose_a_card_to_reset">Odaberite SIM karticu za poništavanje</string>
   <string name="choose_assist_title">Odaberite aplikaciju Pomoćnik</string>
@@ -5249,6 +5299,7 @@ okrenut prema vanjskom zaslonu"</string>
   <string name="failed_to_shut_down_find_device_content">"Ne mogu isključiti Pronađi uređaj. Pričekajte minutu ili dvije i pokušajte ponovno."</string>
   <string name="failed_to_shut_down_find_device_title">"Ne mogu isključiti Pronađi uređaj"</string>
   <string name="fallback_home_title">Samo trenutak…</string>
+  <string name="fast_connect_device_image">Slika</string>
   <string name="fcc_equipment_id">ID opreme</string>
   <string name="feature_flags_dashboard_title">Oznake značajki</string>
   <string name="feature_title_account">Xiaomi račun</string>
@@ -9564,6 +9615,8 @@ Uvjeti i odredbe na %s"</string>
   <string name="owner_info_settings_summary">Ništa</string>
   <string name="owner_info_settings_title">Poruka na Zaklj. zaslonu</string>
   <string name="owner_space">Prvi prostor</string>
+  <string name="pc_hidemode_performance_chip_title">Performanse (overclocking)</string>
+  <string name="pc_power_mode_has_performance_chip">Poboljšane performanse (overclocking)</string>
   <string name="p2p_summary_enable_GPS">Ova značajka radi kada su uključene usluge lokacije</string>
   <string name="packages_subtitle">Uključeni paketi</string>
   <string name="pad_add_fingerprint_finish_message">Nastavite za pristup dodatnim postavkama.</string>
@@ -13594,6 +13647,8 @@ Kada je omogućeno, ovaj uređaj ispunjava uvjete za pridruživanje Nit mreži, 
   <string name="toggle_disable_ciwlan_call_dialog_title">Onemogućiti %s?</string>
   <string name="toggle_disable_ciwlan_call_might_drop_dialog_body">Isključivanje %s može uzrokovati prekidanje poziva.</string>
   <string name="toggle_disable_ciwlan_call_will_drop_dialog_body">Isključivanje %s uzrokovat će prekidanje poziva.</string>
+  <string name="toggle_rtt_preference_summary">Tekst u stvarnom vremenu (RTT) omogućuje vam korištenje teksta za komunikaciju tijekom telefonskog poziva</string>
+  <string name="toggle_rtt_preference_title">RTT pozivi</string>  
   <string name="tomorrow">Sutra</string>
   <string name="tooltip_description">opis</string>
   <string name="tooltip_label">prikaži opis</string>
@@ -14901,11 +14956,11 @@ Nemojte zatvoriti stranicu prije uspostavljanja veze."</string>
   <string name="webview_disabled_for_user">(onemogućeno za korisnika %s)</string>
   <string name="webview_license_title">WebView licenca sustava</string>
   <string name="webview_uninstalled_for_user">(deinstalirano za korisnika %s)</string>
-  <string name="wechat">WeChat</string>
   <string name="wednesday">Srijeda</string>
   <string name="wednesday_first_day_of_week">Srijeda</string>
   <string name="wednesday_short">Sri</string>
   <string name="wednesday_shortest">S</string>
+  <string name="welcomeTip">Prilagodite napon i frekvenciju svih jezgri CPU-a i GPU-a</string>
   <string name="weight_heavy">Bold</string>
   <string name="weight_light">Tanak</string>
   <string name="weight_setting_toast">Debljinu fonta možete promijeniti samo za zadani font sustava</string>
