--- a/Croatian/main/HTMLViewer.apk/res/values-hr/strings.xml
+++ b/Croatian/main/HTMLViewer.apk/res/values-hr/strings.xml
@@ -29,6 +29,10 @@
   <string name="abc_toolbar_collapse_description">Sažmi</string>
   <string name="action_use_network">Koristi</string>
   <string name="actionbar_button_up_description">Natrag</string>
+  <string name="accessibility_sliding_button_state_description_off">Isključeno</string> 
+  <string name="accessibility_sliding_button_state_description_on">Uključeno</string> 
+  <string name="accessibility_tab_state_description_unselect">Nije odabrano</string> 
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
   <string name="ad_service">Usluga oglasa</string>
   <string name="ai_services_network_error_message">"Ne mogu se povezati s mrežom.
 Provjerite mrežne postavke i pokušajte ponovno."</string>
@@ -62,6 +66,12 @@ idite na %s"</string>
   <string name="mibi_license">Mi Kredit Uvjeti Pružanja Usluge</string>
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izlaz iz načina uređivanja</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Uđi u način uređivanja</string>
+  <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -87,6 +97,10 @@ idite na %s"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_none">"To je sve za sada"</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh">Samo trenutak…</string>
   <string name="miuix_sbl_tracking_progress_labe_up_refresh_fail">"Ne mogu učitati stavke"</string>
+  <string name="miuix_progressbar_loading">Samo trenutak…</string>
+  <string name="miuix_show_password">Prikaži zaporku</string>
+  <string name="miuix_stretchablewidget_collapsed">Sažeto</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="monday">Ponedjeljak</string>
   <string name="monday_short">Pon</string>
   <string name="monday_shortest">P</string>
