--- a/Croatian/main/MiuiHome.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiHome.apk/res/values-hr/strings.xml
@@ -37,6 +37,7 @@
   <string name="accessibility_menu_item_smallwindow_enable">Ova aplikacija podržava plutajuće prozore</string>
   <string name="accessibility_menu_item_split_disable">"Aplikacija ne podržava podijeljeni zaslon."</string>
   <string name="accessibility_menu_item_split_enable">Aplikacija podržava podijeljeni zaslon</string>
+  <string name="accessibility_recent_task_clear_info">Izbriši sve Nedavno</string>
   <string name="accessibility_recent_task_enter">Nedavno otvoreno</string>
   <string name="accessibility_recent_task_exit">Nedavno zatvoreno</string>
   <string name="accessibility_recent_task_locked_state">Zaključano</string>
@@ -102,6 +103,7 @@
   <string name="all_apps_slide_up_tips">Pomicanje prema gore rezervirano je za otvaranje Ladice aplikacija. Promjenite na uobičajeni način Početnog zaslona i pokušajte ponovo.</string>
   <string name="all_apps_suggestions">Prijedlozi aplikacija</string>
   <string name="animation_rate_title">Brzina animacije</string>
+  <string name="announce_folder_close">Zatvori “%1$s”</string>
   <string name="announce_for_app_move_in_folder">Premješteno na mjesto %1$d u mapi</string>
   <string name="announce_for_checked">%1$s, označen</string>
   <string name="announce_for_checked_after">označen, %1$s</string>
