--- a/Croatian/main/XiaomiSimActivateService.apk/res/values-hr/strings.xml
+++ b/Croatian/main/XiaomiSimActivateService.apk/res/values-hr/strings.xml
@@ -141,7 +141,7 @@ Unesite broj telefona povezan s vašom novom SIM karticom da ponovno aktivirate 
   <string name="auth_fail_warning">Sesija je istekla. Ponovno se prijavite.</string>
   <string name="back">Natrag</string>
   <string name="change_activate_email">Promijeni adresu e-pošte</string>
-  <string name="change_password">Promijeni lozinku</string>
+  <string name="change_password">Promijeni zaporku</string>
   <string name="checking_client">Provjera aktivacijskog okruženja</string>
   <string name="collect_diagnosis_log">Prikupi zapisnike</string>
   <string name="confirm_activate_email">Potvrđeno</string>
@@ -184,7 +184,8 @@ Pošaljite ovaj kod nadzorniku."</string>
   <string name="passport_access_denied">Pristup odbijen</string>
   <string name="passport_account_name">"Račun: %1$s "</string>
   <string name="passport_area_code_title">Pozivni broj</string>
-  <string name="passport_bad_authentication">Nevažeće korisničko ime ili lozinka</string>
+  <string name="passport_attention">Pažnja</string>
+  <string name="passport_bad_authentication">Nevažeće korisničko ime ili zaporka</string>
   <string name="passport_can_not_recevie_verify_code">"Niste primili kôd?"</string>
   <string name="passport_checking_account">Provjera lozinke…</string>
   <string name="passport_clear_input">Izbriši uneseni sadržaj</string>
@@ -200,7 +201,7 @@ Pošaljite ovaj kod nadzorniku."</string>
   <string name="passport_dialog_phone_number_prefix">Broj telefona: %s</string>
   <string name="passport_dialog_register_other">"Ne, stvorit ću ga"</string>
   <string name="passport_email">Adresa e-pošte</string>
-  <string name="passport_empty_password">"Lozinka ne može biti prazna"</string>
+  <string name="passport_empty_password">"Zaporka ne može biti prazna"</string>
   <string name="passport_error_auth_fail">Sesija je istekla. Prijavite se ponovno.</string>
   <string name="passport_error_device_id">"Ne mogu dobiti ID uređaja"</string>
   <string name="passport_error_dynamic_token_error">Kod za provjeru nije točan</string>
@@ -243,7 +244,7 @@ Pošaljite ovaj kod nadzorniku."</string>
   <string name="passport_page_load_failed">"Ne mogu otvoriti stranicu"</string>
   <string name="passport_password_login_btn">Prijavite se</string>
   <string name="passport_password_not_show">"Ne prikazuj zaporku"</string>
- <string name="passport_password_req_notice">Zaporka mora biti dugačka 8-16 znakova i kombinirati barem dva od sljedećeg: znamenke, slova i posebne simbole (npr. 123abc@# ili 123abc ili abc@#).</string> <string name="passport_password_show">Prikaži zaporku</string>
+  <string name="passport_password_req_notice">Zaporka mora biti dugačka 8-16 znakova i kombinirati barem dva od sljedećeg: znamenke, slova i posebne simbole (npr. 123abc@# ili 123abc ili abc@#).</string> <string name="passport_password_show">Prikaži zaporku</string>
   <string name="passport_querying_phone_info">Traženje informacija o računu…</string>
   <string name="passport_quick_login_title">Unesite svoju zaporku</string>
   <string name="passport_reging">Izrada računa…</string>
@@ -268,7 +269,7 @@ Pošaljite ovaj kod nadzorniku."</string>
   <string name="passport_to_verify_code_login">Prijavite se SMS-om</string>
   <string name="passport_unknow_host_network_error">Provjerite mrežne postavke i pokušajte ponovno</string>
   <string name="passport_user_id_hint">E-pošta/telefonski broj/ID Xiaomi računa</string>
-  <string name="passport_user_id_intro">Unesite lozinku za %1$s</string>
+  <string name="passport_user_id_intro">Unesite zaporku za %1$s</string>
   <string name="passport_user_password_hint">Zaporka</string>
   <string name="passport_vcode_what_app_send_prompt">Vaš WhatsApp kontrolni kôd bit će poslan na vaš telefon za oporavak (&lt;font color=#1F93FF>%s&lt;/font>).</string>
   <string name="passport_wechat_not_install">Prvo instalirajte WeChat</string>
